[gd_scene load_steps=9 format=3 uid="uid://d3lv4k7ojl51"]

[ext_resource type="Script" path="res://Scenes/Multiplayer/KoopMultiplayerScene.gd" id="1_3myuo"]
[ext_resource type="Texture2D" uid="uid://8yscnlvx11hk" path="res://Sprites/Switch/black_off.svg" id="2_a7sxp"]
[ext_resource type="Texture2D" uid="uid://blqky2hsct452" path="res://Sprites/Switch/black_on.svg" id="4_hxeay"]
[ext_resource type="Texture2D" uid="uid://c2pe7fupsvd5j" path="res://Sprites/Switch/white_off.svg" id="5_o40kw"]
[ext_resource type="Script" path="res://Sprites/Switch/Switch.gd" id="5_ru3r5"]
[ext_resource type="Texture2D" uid="uid://bkdr5x8xo7he2" path="res://Sprites/Switch/white_on.svg" id="6_ksan3"]
[ext_resource type="Texture2D" uid="uid://cpiutjtj20tfu" path="res://Sprites/Lamps/off.PNG" id="6_nnwuf"]
[ext_resource type="Script" path="res://Sprites/Lamps/Lamp.gd" id="7_gjff7"]

[node name="KoopMultiplayerScene" type="Node2D"]
script = ExtResource("1_3myuo")

[node name="ColorRect" type="ColorRect" parent="."]
offset_right = 960.0
offset_bottom = 1080.0

[node name="Switch_1" type="TextureRect" parent="."]
offset_left = 407.0
offset_top = 226.0
offset_right = 497.0
offset_bottom = 436.0
rotation = 1.5708
texture = ExtResource("2_a7sxp")
expand_mode = 4
flip_h = true
script = ExtResource("5_ru3r5")

[node name="Switch_2" type="TextureRect" parent="."]
offset_left = 407.0
offset_top = 392.0
offset_right = 497.0
offset_bottom = 602.0
rotation = 1.5708
texture = ExtResource("4_hxeay")
expand_mode = 4
flip_h = true
script = ExtResource("5_ru3r5")

[node name="Switch_3" type="TextureRect" parent="."]
offset_left = 407.0
offset_top = 559.0
offset_right = 497.0
offset_bottom = 769.0
rotation = 1.5708
texture = ExtResource("4_hxeay")
expand_mode = 4
flip_h = true
script = ExtResource("5_ru3r5")

[node name="Switch_4" type="TextureRect" parent="."]
offset_left = 407.0
offset_top = 730.0
offset_right = 497.0
offset_bottom = 940.0
rotation = 1.5708
texture = ExtResource("4_hxeay")
expand_mode = 4
flip_h = true
script = ExtResource("5_ru3r5")

[node name="Switch_5" type="TextureRect" parent="."]
offset_left = 1671.0
offset_top = 226.0
offset_right = 1761.0
offset_bottom = 436.0
rotation = 1.5708
texture = ExtResource("5_o40kw")
expand_mode = 4
flip_h = true
script = ExtResource("5_ru3r5")

[node name="Switch_6" type="TextureRect" parent="."]
offset_left = 1671.0
offset_top = 392.0
offset_right = 1761.0
offset_bottom = 602.0
rotation = 1.5708
texture = ExtResource("6_ksan3")
expand_mode = 4
flip_h = true
script = ExtResource("5_ru3r5")

[node name="Switch_7" type="TextureRect" parent="."]
offset_left = 1671.0
offset_top = 559.0
offset_right = 1761.0
offset_bottom = 769.0
rotation = 1.5708
texture = ExtResource("6_ksan3")
expand_mode = 4
flip_h = true
script = ExtResource("5_ru3r5")

[node name="Switch_8" type="TextureRect" parent="."]
offset_left = 1671.0
offset_top = 730.0
offset_right = 1761.0
offset_bottom = 940.0
rotation = 1.5708
texture = ExtResource("6_ksan3")
expand_mode = 4
flip_h = true
script = ExtResource("5_ru3r5")

[node name="Lamps" type="VBoxContainer" parent="."]
offset_left = 893.0
offset_top = 56.0
offset_right = 1029.0
offset_bottom = 1016.0
size_flags_vertical = 3
theme_override_constants/separation = 22

[node name="Lamp_1" type="TextureRect" parent="Lamps"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
size_flags_vertical = 3
texture = ExtResource("6_nnwuf")
expand_mode = 2
script = ExtResource("7_gjff7")

[node name="Lamp_2" type="TextureRect" parent="Lamps"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
size_flags_vertical = 3
texture = ExtResource("6_nnwuf")
expand_mode = 2
script = ExtResource("7_gjff7")

[node name="Lamp_3" type="TextureRect" parent="Lamps"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
size_flags_vertical = 3
texture = ExtResource("6_nnwuf")
expand_mode = 2
script = ExtResource("7_gjff7")

[node name="Lamp_4" type="TextureRect" parent="Lamps"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
size_flags_vertical = 3
texture = ExtResource("6_nnwuf")
expand_mode = 2
script = ExtResource("7_gjff7")

[node name="Lamp_5" type="TextureRect" parent="Lamps"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
size_flags_vertical = 3
texture = ExtResource("6_nnwuf")
expand_mode = 2
script = ExtResource("7_gjff7")

[node name="Lamp_6" type="TextureRect" parent="Lamps"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
size_flags_vertical = 3
texture = ExtResource("6_nnwuf")
expand_mode = 2
script = ExtResource("7_gjff7")

[node name="Lamp_7" type="TextureRect" parent="Lamps"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
size_flags_vertical = 3
texture = ExtResource("6_nnwuf")
expand_mode = 2
script = ExtResource("7_gjff7")
